--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -13,8 +13,8 @@ export interface Props {
   description: string;
   image?: string;
 }
-
-const { title, description, image = "/social_img.png" } = Astro.props;
+const { title, description, image = "/assets/og-default.png" } = Astro.props;
+console.log(image);
 ---
 
 <!-- Global Metadata -->
