--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -16,7 +16,18 @@ export interface Props {
 const { title, description, image = "/assets/og-default.png" } = Astro.props;
 console.log(image);
 ---
-
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X98DQDQE7B"></script>
+<script>
+  // @ts-ignore
+  window.dataLayer = window.dataLayer || [];
+  // @ts-ignore
+  function gtag(){dataLayer.push(arguments);}
+  // @ts-ignore
+  gtag('js', new Date());
+  // @ts-ignore
+  gtag('config', 'G-X98DQDQE7B');
+</script>
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
