--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -6,7 +6,7 @@ import Navbar from "@/components/Navbar.astro";
 import TopFrameLeft from "@/assets/TopFrameLeft.svg";
 import TopFrameRight from "@/assets/TopFrameRight.svg";
 import ExpertTopFrame from "@/assets/RightStar.svg";
-import AboveFooter from "@/components/AboveFooter.astro";
+import AssistanceSection from "@/components/AssistanceSection.astro";
 
 const {
   image,
@@ -57,8 +57,7 @@ const isProfilePage = Astro.request.url.includes("/profile");
       />
     </div>
 
-    {!isProfilePage ? <AboveFooter /> : null}
-
+    {!isProfilePage && <AssistanceSection />}
     <Footer />
   </body>
 </html>
