--- a/src/pages/champions/[...id].astro
+++ b/src/pages/champions/[...id].astro
@@ -85,6 +85,7 @@ const contributionIcon: ContributionIcon = {
     <Button
       href="/"
       variant="secondary-rounded"
+      additionalStyles="self-center md:self-start self-"
     >
       <Icon
         pack="heroicons-solid"
@@ -156,7 +157,7 @@ const contributionIcon: ContributionIcon = {
           </button>
         </div> -->
 
-        <p class="text-gray-darker text-lg md:text-xl font-semibold">
+        <p class="text-gray-darker text-center md:text-left text-lg md:text-xl font-semibold">
           {role}
         </p>
 
