--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,14 @@ import Directory from "@/components/Directory";
 <Layout>
   <!-- Hero -->
   <div class="relative isolate">
-    <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-20">
-      <div class="hidden sm:mb-8 sm:flex sm:justify-center"></div>
+    <div class="mx-auto max-w-2xl py-10 md:py-20">
       <div class="text-center">
         <h1
-          class="text-4xl font-black tracking-tight text-primary-default sm:text-6xl"
+          class="text-3xl md:text-6xl font-black tracking-tight text-primary-default"
         >
           Champions Directory
         </h1>
-        <p class="mt-6 text-lg leading-8 text-gray-darker">
+        <p class="mt-6 md:text-lg text-gray-darker">
           The Green Software Champions project showcases the amazing work of our community. Find amazing speakers, writers, organizers, mentors & contributors around the world who are leading the way in decarbonizing software.
         </p>
       </div>
