--- a/src/components/ActivityCard.astro
+++ b/src/components/ActivityCard.astro
@@ -37,7 +37,7 @@ try {
       {activity.metadata.image && (
         <div class="aspect-[1.91/1] w-full md:w-auto md:h-full">
           <img
-            class="w-full h-full object-cover rounded-lg "
+            class="w-full h-full object-cover rounded-lg aspect-[1.91/1]"
             src={activity.metadata.image}
             alt={activity.metadata.title}
             onerror="this.src='/assets/og-image-not-available.png'"
