--- a/src/components/ActivityCard.astro
+++ b/src/components/ActivityCard.astro
@@ -25,17 +25,17 @@ try {
   activity.metadata && activity.metadata.title && activity.metadata.image ? (
     <a
       href={activity.url}
-      class="flex flex-col md:flex-row bg-white rounded-lg shadow relative p-2 md:h-32  gap-4 max-w-full md:max-w-md items-center"
+      class="flex flex-col lg:flex-row bg-white rounded-lg shadow relative p-2 lg:h-32  gap-4 max-w-full lg:max-w-lg lg:items-center"
       target="_blank"
       rel="noopener noreferrer"
     >
       <Icon
         pack="heroicons-outline"
         name="external-link"
-        class="h-4 w-4 absolute bottom-2 md:bottom-auto  md:top-2 right-2 text-gray-400"
+        class="h-4 w-4 absolute bottom-2 lg:bottom-auto  lg:top-2 right-2 text-gray-400"
       />
       {activity.metadata.image && (
-        <div class="aspect-[1.91/1] w-full md:w-auto md:h-full">
+        <div class="aspect-[1.91/1] w-full lg:w-auto lg:h-full">
           <img
             class="w-full h-full object-cover rounded-lg aspect-[1.91/1]"
             src={activity.metadata.image}
