--- a/src/pages/champions/[...id].astro
+++ b/src/pages/champions/[...id].astro
@@ -94,9 +94,8 @@ const contributionIcon: ContributionIcon = {
       />
        Back to Champions Directory</Button
     >
-    <div class="flex flex-col md:flex-row gap-8">
-      <!-- Content for div1 -->
-      <div class="flex flex-col gap-4 md:w-[450px] items-center md:items-start">
+    <div class="grid  md:grid-cols-[1fr_2fr] lg:grid-cols-[1fr_3fr] gap-10 lg:gap-20">
+      <div class="flex flex-col gap-4  items-center md:items-start">
         <div class="relative p-2 rounded-full inline-block">
           {/* Gradient background */}
           <div
@@ -109,7 +108,7 @@ const contributionIcon: ContributionIcon = {
           </div>
           <div class="relative">
             <Image
-              class="rounded-full relative z-10 w-40 md:w-[232px]"
+              class="rounded-full relative z-10 w-full max-w-[232px]"
               src={github
                 ? `https://github.com/${github}.png`
                 : "/assets/not-found-avatar.png"}
