--- a/src/components/ActivityCard.astro
+++ b/src/components/ActivityCard.astro
@@ -61,8 +61,8 @@ try {
     <a href={activity.url} class="text-primary-default">
       Visit activity{" "}
       <Icon
-        pack="heroicons-outline"
-        name="arrow-right"
+        pack="ph"
+        name="arrow-right-bold"
         class="w-4 h-4 inline-block"
       />
     </a>
