--- a/src/pages/champions/[...id].astro
+++ b/src/pages/champions/[...id].astro
@@ -70,8 +70,8 @@ const contributionIcon: ContributionIcon = {
   mentoring: "users-three-fill",
   hosting: "house-line-fill",
   "gsf contribution": "tree-fill",
-  "gsf project leadership": "shooting-star-fill",
-  "oss contribution": "code-simple-fill",
+  "gsf project leadership": "star-fill",
+  "oss contribution": "code-fill",
 };
 ---
 
