Update Navbar links

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,8 +2,8 @@
 import { Icon } from "astro-icon";
 import Button from "./ui/button.astro";
 const navLinks = [
-  { name: "Foundation Wiki", href: "https://grnsft.org/wiki" },
-  { name: "GSF Website", href: "https://grnsft.org" },
+  { name: "About", href: "https://grnsft.org/champions/whatis" },
+  { name: "Homepage", href: "https://grnsft.org" },
 ];
 ---
 
